# 33

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/: main.py  reports.py  services.py  utils.py  views.py
tests/: conftest.py  test_classes.py  test_reports.py  test_services.py  test_utils.py  test_views.py
