[tool.poetry]
name = "pythonproject32"
version = "0.1.0"
description = ""
authors = ["ilonahg <gogilchyn2005ilona@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

 [tool.mypy]
disable_error_code = "all"  # Отключает все проверки

[tool.flake8]
enable-extensions = []
max-line-length = 88
